<resources>
    <string name="app_name">socio-infonavit-android-new</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Login -->
    <string name="login_mail">Correo</string>
    <string name="login_password">Contraseña</string>
    <string name="login_forgot_password">Olvide mi contraseña</string>
    <string name="login_enter">Entrar</string>
    <string name="login_information">Más información</string>
    <string name="login_no_account">No tengo una cuenta "Registrarme"</string>
    <string name="login_error">Usuario o correo incorrecto, por favor intente de nuevo"</string>
    <string name="login_ok">Ok</string>

    <!-- Movie -->
    <string name="movie_title">Titulo</string>
    <string name="movie">Peliculas</string>
    <string name="movie_detail">Detalles</string>
    <string name="movie_language">Lenguaje</string>
    <string name="movie_votes">Votos</string>
    <string name="movie_released">Lanzado</string>
    <string name="movie_release">lanzamiento</string>
    <string name="movie_overView">Descripción</string>
    <string name="movie_overView_example">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</string>

    <!-- App -->
    <string name="close_app">¿Desea salir de la aplicación?</string>


</resources>