<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.benevits.MovieDetailFragment">

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/gradient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgBackGround"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/img_not_available">
        </ImageView>

    </FrameLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@id/guideline2"
        android:layout_width="120dp"
        android:layout_height="170dp"
        android:clipToPadding="true"
        app:cardCornerRadius="8dp">

        <ImageView
            android:id="@+id/imgMovie"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/img_not_available">

        </ImageView>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="321dp" />

    <TextView
        android:id="@+id/txtTitleMovie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cardView"
        android:gravity="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="24sp"
        tools:text="@string/movie_title">
    </TextView>

    <TextView
        android:id="@+id/txtRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="@+id/cardView"
        app:drawableStartCompat="@drawable/ic_baseline_star_border_24"
        android:textColor="@color/white"
        android:drawableTint="@color/white"
        tools:text="4.3 (1213) Reviews"
        android:drawablePadding="8dp">
    </TextView>

    <TextView
        android:id="@+id/txtRelease"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        app:drawableStartCompat="@drawable/ic_baseline_calendar_today_24"
        app:drawableTint="@color/white"
        app:layout_constraintStart_toStartOf="@id/txtRating"
        android:layout_marginTop="8dp"
        android:drawablePadding="8dp"
        app:layout_constraintTop_toBottomOf="@id/txtRating"
        tools:text="02/12/2021 Release">
    </TextView>

    <TextView
        android:id="@+id/txtLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        app:drawableStartCompat="@drawable/ic_baseline_language_24"
        app:drawableTint="@color/white"
        app:layout_constraintStart_toStartOf="@id/txtRelease"
        android:layout_marginTop="8dp"
        android:drawablePadding="8dp"
        app:layout_constraintTop_toBottomOf="@id/txtRelease"
        tools:text="Language ES">
    </TextView>

    <LinearLayout
        android:id="@+id/linearBookmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:layout_marginStart="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/frame"
        app:layout_constraintStart_toEndOf="@id/cardView"
        app:layout_constraintEnd_toStartOf="@id/linearFavorite">

        <ImageView
            android:src="@drawable/ic_baseline_bookmark_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bookmark">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:layout_marginStart="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/frame"
        app:layout_constraintStart_toEndOf="@id/linearBookmark"
        app:layout_constraintEnd_toStartOf="@id/linearShare">

        <ImageView
            android:src="@drawable/ic_baseline_favorite_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Favorite">
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/linearFavorite"
        app:layout_constraintTop_toBottomOf="@id/frame">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_share_24">
        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Share">
        </TextView>

    </LinearLayout>

    <TextView
        android:id="@+id/txtOverviewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/movie_overView"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/guideline2"
        tools:layout_editor_absoluteX="0dp">

    </TextView>

    <TextView
        android:id="@+id/txtOverview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtOverviewTitle"
        android:padding="8dp"
        tools:text="@string/movie_overView_example">
    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>